--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,24 @@
 version: '3.1'
 
 services:
-    php:
-        build:
-            context: .
-            dockerfile: Dockerfile
+    wordpress:
+        image: wordpress
+        restart: always
         ports:
-            - '2345:80'
+            - 5555:80
+        environment:
+            WORDPRESS_DB_HOST: db
+            WORDPRESS_DB_USER: root
+            WORDPRESS_DB_PASSWORD: password
+            WORDPRESS_DB_NAME: MarmitonData
         volumes:
-            - ./wordpress:/var/www/html
+            - ./wordpress:/var/www/html 
     db:
         image: 'mariadb'
         restart: always
         environment:
             MYSQL_DATABASE: MarmitonData
+            MYSQL_USER: root
             MYSQL_ROOT_PASSWORD: password
         volumes:
             # Pour lancer un dump automatiquement au montage du conteneur
